fixing z-index on notes ... new version of the Document Viewer.

--- a/public/stylesheets/ui/documents.css
+++ b/public/stylesheets/ui/documents.css
@@ -283,7 +283,7 @@
           .note .left_cover,
           .note .right_cover {
             position: absolute;
-            z-index: 5;
+            z-index: 2;
             background: white;
             opacity: 0.68;
             filter: alpha(opacity=68);
